Added: UI & API integration for forgot and reset Password

--- a/src/styles/CreateUser.css
+++ b/src/styles/CreateUser.css
@@ -1,9 +1,10 @@
 .paperStyle{
-    padding: 10;
+    padding: 10px;
     height:70%;
-    width: 750px;
-    margin: 20px auto;
-}
+    width: 80%;
+    margin:3% auto;
+    max-width: 750px;
+    }
 .gridStyle{
     margin-left: 100px;
     font-family: sans-serif;
